--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-icons": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
